# CVDR-Verify

./: README.md
mktd01/: README.md
mktd02/: README.md  verify-quick.sh
mktd02/mktd02-verify/: Cargo.toml
mktd02/mktd02-verify/src/: fetch.rs  main.rs  v1_transition.rs  v2_certificate.rs  v3_module.rs  v4_tombstone.rs
mktd03/: README.md
zkpd01/: README.md
